--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -1,11 +1,10 @@
 #1
-name: docc
+name: DocC
 
 #2
 on:
   push:
     branches: [main]
-  workflow_dispatch:
 
 #3
 permissions:
@@ -17,11 +16,11 @@ permissions:
 jobs:
   build:
     #2
-    runs-on: macos-12
+    runs-on: macos-latest
     #3
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
       #4
