--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -1,51 +1,40 @@
-#1
-name: DocC
-
-#2
+name: Publish DocC to GitHub Pages
 on:
   push:
     branches: [main]
-
-#3
 permissions:
+  contents: read
   pages: write
   id-token: write
-  contents: read
+concurrency:
+  group: pages
+  cancel-in-progress: true
 
-#1
 jobs:
   build:
-    #2
-    runs-on: macos-latest
-    #3
+    runs-on: macos-latest   # Mac runner for Xcode
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - name: Configure Pages
+        uses: actions/configure-pages@v5
+      - name: Select Xcode
+        uses: maxim-lobanov/setup-xcode@v1
         with:
-          fetch-depth: 0
-      #4
-      - name: Run Build Docs
+          xcode-version: '15.2.0'
+      - name: Build DocC
         run: ./build-docc.sh
-      #5
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+      - name: Upload Pages Artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: .docs
 
-  #1
   deploy:
-    #2
     runs-on: ubuntu-latest
-    #3
     needs: build
-    #4
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2 
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
