--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -1,7 +1,7 @@
 name: Publish DocC to GitHub Pages
 on:
   push:
-    branches: [main]
+    branches: [docs/DocC]
 permissions:
   contents: read
   pages: write
