--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -1,7 +1,7 @@
 name: Publish DocC to GitHub Pages
 on:
   push:
-    branches: [docs/DocC]
+    branches: [main]
 permissions:
   contents: read
   pages: write
@@ -20,7 +20,7 @@ jobs:
       - name: Select Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: '15.2.0'
+          xcode-version: latest-stable
       - name: Build DocC
         run: ./build-docc.sh
       - name: Upload Pages Artifact
