--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -1,40 +1,103 @@
-name: Publish DocC to GitHub Pages
+name: DocC Runner
+
 on:
   push:
-    branches: [main]
+    branches: ["docs/DocC"]
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
-concurrency:
-  group: pages
-  cancel-in-progress: true
 
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+  
+# A single job that builds and deploys the DocC documentation
 jobs:
-  build:
-    runs-on: macos-latest   # Mac runner for Xcode
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Configure Pages
-        uses: actions/configure-pages@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
       - name: Select Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: 'name: DocC Runner
+
+on:
+  push:
+    branches: ["main"]
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+  
+# A single job that builds and deploys the DocC documentation
+jobs:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: macos-14
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Select Xcode 15.1
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
       - name: Build DocC
-        run: ./build-docc.sh
-      - name: Upload Pages Artifact
+        run: |
+          swift package resolve;
+
+          xcodebuild docbuild -scheme Northstar -derivedDataPath /tmp/docbuild -destination 'generic/platform=xros';
+          
+          $(xcrun --find docc) process-archive \
+            transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-xros/Northstar.doccarchive \
+            --output-path docs \
+            --hosting-base-path 'Northstar';
+          
+          echo "<script>window.location.href += \"/documentation/northstar\"</script>" > docs/index.html;
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .docs
+          path: 'docs'
+      - id: deployment
+        name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+      - name: Build DocC
+        run: |
+          swift package resolve;
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+          xcodebuild docbuild -scheme Northstar -derivedDataPath /tmp/docbuild -destination 'generic/platform=xros';
+          
+          $(xcrun --find docc) process-archive \
+            transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-xros/Northstar.doccarchive \
+            --output-path docs \
+            --hosting-base-path 'Northstar';
+          
+          echo "<script>window.location.href += \"/documentation/northstar\"</script>" > docs/index.html;
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: 'docs'
+      - id: deployment
+        name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
