--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -2,102 +2,56 @@ name: DocC Runner
 
 on:
   push:
-    branches: ["docs/DocC"]
+    branches: ["main"]
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow one concurrent deployment
 concurrency:
   group: "pages"
   cancel-in-progress: true
-  
-# A single job that builds and deploys the DocC documentation
+
 jobs:
   deploy:
+    runs-on: macos-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
+
+      - name: Setup GitHub Pages
         uses: actions/configure-pages@v4
+
       - name: Select Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: 'name: DocC Runner
-
-on:
-  push:
-    branches: ["main"]
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-  
-# A single job that builds and deploys the DocC documentation
-jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: macos-14
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Select Xcode 15.1
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
           xcode-version: latest-stable
+
       - name: Build DocC
         run: |
-          swift package resolve;
+          swift package resolve
 
-          xcodebuild docbuild -scheme Northstar -derivedDataPath /tmp/docbuild -destination 'generic/platform=xros';
-          
-          $(xcrun --find docc) process-archive \
-            transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-xros/Northstar.doccarchive \
+          xcodebuild docbuild \
+            -scheme Northstar \
+            -derivedDataPath /tmp/docbuild \
+            -destination 'generic/platform=xros'
+
+          $(xcrun --find docc) process-archive transform-for-static-hosting \
+            /tmp/docbuild/Build/Products/Debug-xros/Northstar.doccarchive \
             --output-path docs \
-            --hosting-base-path 'Northstar';
-          
-          echo "<script>window.location.href += \"/documentation/northstar\"</script>" > docs/index.html;
-      - name: Upload artifact
+            --hosting-base-path 'Northstar'
+
+          echo "<script>window.location.href += '/documentation/northstar'</script>" > docs/index.html
+
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: 'docs'
-      - id: deployment
-        name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
-      - name: Build DocC
-        run: |
-          swift package resolve;
 
-          xcodebuild docbuild -scheme Northstar -derivedDataPath /tmp/docbuild -destination 'generic/platform=xros';
-          
-          $(xcrun --find docc) process-archive \
-            transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-xros/Northstar.doccarchive \
-            --output-path docs \
-            --hosting-base-path 'Northstar';
-          
-          echo "<script>window.location.href += \"/documentation/northstar\"</script>" > docs/index.html;
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: 'docs'
-      - id: deployment
-        name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
