--- a/.github/workflows/docc.yml
+++ b/.github/workflows/docc.yml
@@ -2,7 +2,7 @@ name: DocC Runner
 
 on:
   push:
-    branches: ["docs/DocC"]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -31,22 +31,23 @@ jobs:
         with:
           xcode-version: latest-stable
 
-      - name: Build DocC
+      - name: Archive DocC
         run: |
-          swift package resolve
-
           xcodebuild docbuild \
             -scheme Northstar \
-            -derivedDataPath /tmp/docbuild \
-            -destination 'platform=visionOS Simulator,name=Apple Vision Pro,OS=2.2' \
-
-          $(xcrun --find docc) process-archive transform-for-static-hosting \
-            /tmp/docbuild/Build/Products/Debug-xros/Northstar.doccarchive \
-            --output-path docs \
-            --hosting-base-path 'Northstar'
-
-          echo "<script>window.location.href += '/documentation/northstar'</script>" > docs/index.html
-
+            -derivedDataPath ${{ github.workspace }}/DerivedData \
+            -destination 'platform=visionOS Simulator,name=Apple Vision Pro,OS=2.2'
+    
+      - name: Static Hosting
+        env:
+          REPO_NAME: ${{ github.event.repository.name }}
+        run: |
+          ARCHIVE_PATH=$(find "${{ github.workspace }}/DerivedData" -type d -name "*.doccarchive" | head -n 1)
+          OUTPUT_PATH="${{ github.workspace }}/docs"
+          xcrun docc process-archive transform-for-static-hosting \
+            "$ARCHIVE_PATH" \
+            --output-path "$OUTPUT_PATH" \
+            --hosting-base-path "$REPO_NAME"
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
